# Todo-app-with-Docker-GUI-CUI

./: .envlock  compose.yaml
backend/: Dockerfile.dev  pyproject.toml
backend/backend/: main.py  models.py  settings.py
backend/tests/: test_main.py
cui/: Dockerfile.dev  pyproject.toml
cui/cui/: main.py
gui/: Dockerfile.dev  pyproject.toml
gui/gui/: main.py
